--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,62 +9,169 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/date_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="6dp"
+            android:textStyle="bold"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:textAllCaps="false"
+            android:text="Sunday, February 5, 2017" />
+
+        <TextView
+            android:id="@+id/location_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:textStyle="bold"
+            android:gravity="center_horizontal"
+            android:textSize="16sp"
+            android:textAllCaps="false"
+            android:text="NRG Stadium, Houston, Texas" />
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/eagles_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="125dp"
-                android:paddingTop="20dp"
-                android:paddingLeft="6dp"
-                android:scaleType="centerCrop"
-                android:paddingBottom="16dp"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/eagles_logo"/>
-
-            <TextView
-                android:id="@+id/eagles_score"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:textSize="56sp"
-                android:textColor="#000000"
-                android:fontFamily="sans-serif-light"
-                android:text="0" />
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/eagles_logo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="125dp"
+                    android:paddingTop="20dp"
+                    android:paddingLeft="6dp"
+                    android:scaleType="centerCrop"
+                    android:paddingBottom="16dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/eagles_logo"/>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+                <TextView
+                    android:id="@+id/eagles_score"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:textSize="56sp"
+                    android:textColor="#000000"
+                    android:fontFamily="sans-serif-light"
+                    android:text="0" />
 
-            <ImageView
-                android:id="@+id/pats_logo"
-                android:layout_width="120dp"
-                android:layout_height="125dp"
-                android:paddingTop="36dp"
-                android:paddingBottom="16dp"
-                android:scaleType="centerCrop"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/pats_logo"/>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginBottom="6dp"
+                    android:text="Touchdown!"
+                    android:textAllCaps="true"
+                    android:onClick="addTDForEagles"/>
 
-            <TextView
-                android:id="@+id/pats_score"
-                android:layout_width="match_parent"
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginBottom="6dp"
+                    android:text="Field Goal"
+                    android:textAllCaps="true"
+                    android:onClick="addFGForEagles"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginBottom="6dp"
+                    android:text="Extra Point"
+                    android:onClick="addXPForEagles"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginBottom="6dp"
+                    android:text="Safety"
+                    android:onClick="addSafetyForEagles"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:textSize="56sp"
-                android:textColor="#000000"
-                android:fontFamily="sans-serif-light"
-                android:text="0" />
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/pats_logo"
+                    android:layout_width="120dp"
+                    android:layout_height="125dp"
+                    android:paddingTop="36dp"
+                    android:paddingBottom="16dp"
+                    android:scaleType="centerCrop"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/pats_logo"/>
+
+                <TextView
+                    android:id="@+id/pats_score"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:textSize="56sp"
+                    android:textColor="#000000"
+                    android:fontFamily="sans-serif-light"
+                    android:text="0" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginBottom="6dp"
+                    android:text="Touchdown!"
+                    android:textAllCaps="true"
+                    android:onClick="addTDForPats"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginBottom="6dp"
+                    android:text="Field Goal"
+                    android:textAllCaps="true"
+                    android:onClick="addFGForPats"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginBottom="6dp"
+                    android:text="Extra Point"
+                    android:onClick="addXPForPats"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginBottom="6dp"
+                    android:text="Safety"
+                    android:onClick="addSafetyForPats"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
