Add rounded reset button and add text to strings.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
                 android:gravity="center_horizontal"
                 android:textSize="16sp"
                 android:textAllCaps="false"
-                android:text="Sunday, February 5, 2017" />
+                android:text="@string/date" />
 
             <TextView
                 android:id="@+id/location_view"
@@ -35,7 +35,7 @@
                 android:gravity="center_horizontal"
                 android:textSize="16sp"
                 android:textAllCaps="false"
-                android:text="NRG Stadium, Houston, Texas" />
+                android:text="@string/location" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -52,7 +52,7 @@
                         android:id="@+id/eagles_logo"
                         android:layout_width="wrap_content"
                         android:layout_height="135dp"
-                        android:paddingTop="20dp"
+                        android:paddingTop="24dp"
                         android:paddingLeft="6dp"
                         android:scaleType="centerCrop"
                         android:paddingBottom="12dp"
@@ -71,40 +71,40 @@
 
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="38dp"
                         android:layout_marginLeft="24dp"
                         android:layout_marginRight="24dp"
                         android:layout_marginBottom="4dp"
-                        android:text="Touchdown!"
+                        android:text="@string/touchdown"
                         android:textAllCaps="true"
                         android:onClick="addTDForEagles"/>
 
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="38dp"
                         android:layout_marginLeft="24dp"
                         android:layout_marginRight="24dp"
                         android:layout_marginBottom="4dp"
-                        android:text="Field Goal"
+                        android:text="@string/extra_point"
+                        android:onClick="addXPForEagles"/>
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="38dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginRight="24dp"
+                        android:layout_marginBottom="4dp"
+                        android:text="@string/field_goal"
                         android:textAllCaps="true"
                         android:onClick="addFGForEagles"/>
 
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="38dp"
                         android:layout_marginLeft="24dp"
                         android:layout_marginRight="24dp"
                         android:layout_marginBottom="4dp"
-                        android:text="Extra Point"
-                        android:onClick="addXPForEagles"/>
-
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="24dp"
-                        android:layout_marginRight="24dp"
-                        android:layout_marginBottom="4dp"
-                        android:text="Safety"
+                        android:text="@string/safety"
                         android:onClick="addSafetyForEagles"/>
 
                 </LinearLayout>
@@ -137,40 +137,40 @@
 
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="38dp"
                         android:layout_marginLeft="24dp"
                         android:layout_marginRight="24dp"
                         android:layout_marginBottom="4dp"
-                        android:text="Touchdown!"
+                        android:text="@string/touchdown"
                         android:textAllCaps="true"
                         android:onClick="addTDForPats"/>
 
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="38dp"
                         android:layout_marginLeft="24dp"
                         android:layout_marginRight="24dp"
                         android:layout_marginBottom="4dp"
-                        android:text="Field Goal"
+                        android:text="@string/extra_point"
+                        android:onClick="addXPForPats"/>
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="38dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginRight="24dp"
+                        android:layout_marginBottom="4dp"
+                        android:text="@string/field_goal"
                         android:textAllCaps="true"
                         android:onClick="addFGForPats"/>
 
                     <Button
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="38dp"
                         android:layout_marginLeft="24dp"
                         android:layout_marginRight="24dp"
                         android:layout_marginBottom="4dp"
-                        android:text="Extra Point"
-                        android:onClick="addXPForPats"/>
-
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="24dp"
-                        android:layout_marginRight="24dp"
-                        android:layout_marginBottom="4dp"
-                        android:text="Safety"
+                        android:text="@string/safety"
                         android:onClick="addSafetyForPats"/>
 
                 </LinearLayout>
@@ -178,14 +178,21 @@
             </LinearLayout>
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center_horizontal"
-                android:text="Reset"
+                android:text="@string/reset"
+                android:layout_marginBottom="10dp"
                 android:textAllCaps="false"
-                android:background="@color/black"
+                android:background="@drawable/roundedbutton"
                 android:textColor="@color/white"
                 android:onClick="resetScores"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:background="@color/colorPrimaryDark">
+            </View>
 
         </LinearLayout>
 
